--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -147,6 +147,10 @@
   display: flex;
   flex-direction: column;
 
+  h1 {
+   width: 30rem;
+   margin-bottom: 2.5rem;
+  }
   &-box{
     display: flex;
     justify-content: space-between;
