--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -61,6 +61,7 @@ $white: #FEFBEB;
     }
 }
 @mixin background($name) {
+    cursor: pointer;
     background: {
         size: cover;
         position: center;
