adição de imagens

--- a/src/scss/_imgs.scss
+++ b/src/scss/_imgs.scss
@@ -41,3 +41,12 @@
   #nw17{
     @include background(lol2);
   }
+  #nw18{
+    @include background(narutotobi); 
+  }
+  #nw19{
+    @include background(dragonboll);  
+  }
+  #nw19{
+    @include background(manpurple)  
+  }
