chore: configure webpack

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,72 +1,70 @@
 // CORES
 
-$color-primary: #8557E6;
-$black: #13131F;
+$color-primary: #8557e6;
+$black: #13131f;
 $grey-dark: #282830;
-$grey-ligth:#C4C4C4;
-$white: #FEFBEB;
-
+$grey-ligth: #c4c4c4;
+$white: #fefbeb;
 
 // FONTES
 
 @font-face {
-    font-family: 'Inter';
-    src: url(../fonts/inter/Inter-Regular.ttf) format("woff2");
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Inter";
+  src: url(/fonts/inter/Inter-Regular.ttf) format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 @font-face {
-    font-family: 'Inter';
-    src: url(../fonts/inter/Inter-Medium.ttf) format("woff2");
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Inter";
+  src: url(/fonts/inter/Inter-Medium.ttf) format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 @font-face {
-    font-family: 'Lexend Deca' ;
-    src: url(../fonts/lexend-deca/LexendDeca-Regular.ttf) format("woff2");
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-  
+  font-family: "Lexend Deca";
+  src: url(/fonts/lexend-deca/LexendDeca-Regular.ttf) format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
-// HOVER 
+// HOVER
 
-@mixin buttons($id){
-  
-    background-color: $color-primary;
-    color: $white;
-    border-radius: .3rem;
+@mixin buttons($id) {
+  background-color: $color-primary;
+  color: $white;
+  border-radius: 0.3rem;
 
-    @if $id == nw1 {
-        padding: 0.45rem 2.02rem;
-        font-size: 1.4rem;
-    }
-    @else if $id == nw2 {
-        padding: 0.35rem 1.8rem;
-        font-size: 1.2rem;
-    }
-    @else if $id == nw3 {
-        padding: .2rem 1rem;
-    }
-    @else if $id == nw4 {
-        padding: 1rem 1rem;
-    }
-    @else {
-        background: transparent;
-        padding: 0.5rem 2rem;
-        border-radius: 10rem
-    }
+  @if $id == nw1 {
+    padding: 0.45rem 2.02rem;
+    font-size: 1.4rem;
+  } @else if $id == nw2 {
+    padding: 0.35rem 1.8rem;
+    font-size: 1.2rem;
+  } @else if $id == nw3 {
+    padding: 0.2rem 1rem;
+  } @else if $id == nw4 {
+    padding: 1rem 1rem;
+  } @else {
+    background: transparent;
+    padding: 0.5rem 2rem;
+    border-radius: 10rem;
+  }
 }
 @mixin background($name) {
-    cursor: pointer;
-    background: {
-        size: cover;
-        position: center;
-        repeat: no-repeat;
-    }
-    $url: "../img/#{$name}.svg";
-    background-image: linear-gradient(360deg, #13131F 0%, rgba(19, 19, 31, 0) 100%), url($url);
+  cursor: pointer;
+  background: {
+    size: cover;
+    position: center;
+    repeat: no-repeat;
+  }
+  $url: "/images/#{$name}.svg";
+  background-image: linear-gradient(
+      360deg,
+      #13131f 0%,
+      rgba(19, 19, 31, 0) 100%
+    ),
+    url($url);
 }
