style: rename das fonts e formatação da estrutura

--- a/src/scss/_imgs.scss
+++ b/src/scss/_imgs.scss
@@ -48,5 +48,5 @@
     @include background(dragonboll);  
   }
   #nw20{
-    @include background(manpurple)  
+    @include background(manpurple);  
   }
