--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,21 +9,21 @@ $white: #fefbeb;
 // FONTES
 
 @font-face {
-  font-family: "Inter";
+  font-family: "Inter Normal";
   src: url(/fonts/inter/Inter-Regular.ttf) format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Inter";
+  font-family: "Inter Bold";
   src: url(/fonts/inter/Inter-Medium.ttf) format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Lexend Deca";
+  font-family: "Lexend Deca Normal";
   src: url(/fonts/lexend-deca/LexendDeca-Regular.ttf) format("woff2");
   font-weight: 400;
   font-style: normal;
