--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,7 +16,7 @@ $white: #fefbeb;
   font-display: swap;
 }
 @font-face {
-  font-family: "Inter Bold";
+  font-family: "Inter Medium";
   src: url(/fonts/inter/Inter-Medium.ttf) format("woff2");
   font-weight: 500;
   font-style: normal;
