--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -3,11 +3,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 62.5%;
+   
 }
-
-body {
+html {
     background-color: $black;
+    font-size: 62.5%;
+    color: $white;
 }
 .maxWidth {
     max-width: 120rem;
@@ -17,7 +18,6 @@ body {
 a {
     text-decoration: none;
     outline: 0;
-    font: 500 1.6rem 'Inter Medium';
     color: $white;
 }
 
@@ -25,28 +25,8 @@ ul {
     list-style: none;
 }
 
-h1 {
-   font:  4.8rem 'Lexend Deca Normal';
-   color: $white;
-}
-h2 {
-    font: 500 2rem 'Inter Medium'; 
-    color: $grey-ligth;
-}
-h3 {
-    font: 400 2.4rem 'Lexend Deca Normal';
-    color: $white;
-}
-h4 {
-    font:  400 1.3rem  'Lexend Deca Normal';
-}
-
 button {
     cursor: pointer;
     border: none;
     background: transparent;
-}
-p {
-    color: $white;
-    font-family: 'Lexend Deca';
 }
