--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,25 +10,26 @@ $white: #fefbeb;
 
 @font-face {
   font-family: "Inter Normal";
-  src: url(/fonts/inter/Inter-Regular.ttf) format("woff2");
+  src: url(../fonts/inter/Inter-Regular.ttf) format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Inter Medium";
-  src: url(/fonts/inter/Inter-Medium.ttf) format("woff2");
+  src: url(../fonts/Inter-Medium.ttf) format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Lexend Deca Normal";
-  src: url(/fonts/lexend-deca/LexendDeca-Regular.ttf) format("woff2");
+  src: url(../assets/fonts/LexendDeca-Regular.ttf) format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
+
 
 // HOVER
 
