style: ajuste do caminho das fontes

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -95,12 +95,12 @@
   }
 
   h4 {
-    font: 400 1.3rem "Lexend Deca";
+    font: 400 1.3rem "Lexend Deca Normal";
     color: $white;
     line-height: 2rem;
   }
   p {
-    font: 400 1.1rem "Inter";
+    font: 1.1rem "Inter Normal";
     color: $grey-ligth;
   }
   span {
