--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,7 +9,7 @@ $white: #fefbeb;
 // FONTES
 
 @font-face {
-  font-family: "Inter Normal";
+  font-family: "Inter Regular";
   src: url(../fonts/inter/Inter-Regular.ttf) format("woff2");
   font-weight: 400;
   font-style: normal;
@@ -24,7 +24,7 @@ $white: #fefbeb;
 }
 @font-face {
   font-family: "Lexend Deca Normal";
-  src: url(../assets/fonts/LexendDeca-Regular.ttf) format("woff2");
+  src: url(../fonts/LexendDeca-Regular.ttf) format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
