adição da variavel fonte

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -30,6 +30,10 @@ $white: #fefbeb;
   font-display: swap;
 }
 
+$lexend400: 'Lexend Deca Normal';
+$inter400: 'Inter Reguar';
+$inter500: 'Inter Medium';
+
 
 // HOVER
 
