--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -31,3 +31,25 @@ button {
     background: transparent;
 }
 
+.f1 {
+    font-size: $f1;
+}
+
+.f2 {
+    font-size: $f2;
+}
+.f3 {
+    font-size: $f3;
+}
+.f4 {
+    font-size: $f4;
+}
+.f5 {
+    font-size: $f5;
+}
+.f6 {
+    font-size: $f6;
+}
+.f7 {
+    font-size: $f7;
+}
