--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,7 @@ $grey-dark: #282830;
 $grey-ligth: #c4c4c4;
 $white: #fefbeb;
 
+
 // FONTES
 
 @font-face {
@@ -33,6 +34,16 @@ $white: #fefbeb;
 $lexend400: 'Lexend Deca Normal';
 $inter400: 'Inter Reguar';
 $inter500: 'Inter Medium';
+
+// TAMANHO DAS FONTES 
+$f1 : 1.2rem; //12
+$f2 : $f1 * 2; // 24
+$f3 : $f1 * 3; // 36
+$f4 : $f1 * 4; // 48
+$f5 : $f1 + 0.1rem; // 13
+$f6 : $f1 + 0.4rem; // 16
+$f7: $f1 + 0.8rem; // 20
+ 
 
 
 // HOVER
