--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -40,9 +40,10 @@ $f1 : 1.2rem; //12
 $f2 : $f1 * 2; // 24
 $f3 : $f1 * 3; // 36
 $f4 : $f1 * 4; // 48
-$f5 : $f1 + 0.1rem; // 13
-$f6 : $f1 + 0.4rem; // 16
-$f7: $f1 + 0.8rem; // 20
+$f5 : $f1 - 0.1rem; // 11
+$f6 : $f1 + 0.1rem; // 13
+$f7 : $f1 + 0.4rem; // 16
+$f8: $f1 + 0.8rem; // 20
  
 
 
