criação de mixin de flexox e alinahmentos e inserção no código em cada página

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,14 +5,10 @@
   }
   nav {
     height: 5.2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    @include flex-between-center;
   
     .nav-list {
-      display: flex;
-      align-items: center;
-  
+      @include flex-center;
       a {
         position: relative;
         margin: 0 3rem;
