--- a/src/scss/_animes.scss
+++ b/src/scss/_animes.scss
@@ -3,27 +3,23 @@
     display: flex;
     flex-direction: column;
     &-bg {
+        @include flex-column-center;
         margin-top: 9.6rem;
-        display: flex;
-        flex-direction: column;
+       
         width: 100%; 
         height: 30rem;
-       justify-content: center;
+     
         @include background(naruto);
-        
-        h1 {
-            font-size: 4.8rem;
-        }
+    
         p {
             margin-top: 1.5rem;
-            font-size: 2rem;
             color: $grey-ligth;
         }
     }
 }
 .search {
+    @include flex;
     margin-top: 4.2rem;
-    display: flex;
     background: #282830;
     width: 100%;
     padding: 0 1.7rem ;
