--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -31,7 +31,48 @@ button {
     background: transparent;
 }
 
- 
+#logo {
+    font: $f2 $lexend400;
+    color: $color-primary;
+}
+
+a {
+    font: $f7 $inter500;
+  }
+  
+  .h1-home {
+    font: $f4 $lexend400;
+    
+  }
+  .h2-home {
+    font: $f8 $inter500;
+  }
+  
+
+.p {
+    &-error {
+        font: $f8 $lexend400;
+    }
+    &-footer {
+        font: $f7 $inter500;
+    }
+    &-news {
+        &-banner {
+            font: $f2 $lexend400;
+        }
+        &-left {
+            font: $f6 $lexend400;
+        }
+        &-scroll {
+            font: $f5 $lexend400;
+        }
+       
+    
+    }
+}
+
+
+  
 // .f1 {
 //     font-size: $f1;
 // }
@@ -54,21 +95,3 @@ button {
 // .f7 {
 //     font-size: $f7;
 // }
-.p {
-    &-error {
-        font: $f8 $lexend400;
-    }
-    &-news {
-        &-banner {
-            font: $f2 $lexend400;
-        }
-        &-left {
-            font: $f6 $lexend400;
-        }
-        &-scroll {
-            font: $f5 $lexend400;
-        }
-       
-    
-    }
-}
