styles: ajuste de caminho da fonte e estilização do pdescription

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -76,7 +76,10 @@ a {
         &-scroll {
             font: $f5 $lexend400;
         }
-       
+       &-description {
+        font: $f2 $inter400;
+        color: $grey-ligth;
+       }
     
     }
 }
