--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,7 +11,7 @@ $white: #fefbeb;
 
 @font-face {
   font-family: "Inter Regular";
-  src: url(../fonts/inter/Inter-Regular.ttf) format("woff2");
+  src: url(../fonts/Inter-Regular.ttf) format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -32,7 +32,7 @@ $white: #fefbeb;
 }
 
 $lexend400: 'Lexend Deca Normal';
-$inter400: 'Inter Reguar';
+$inter400: 'Inter Regular';
 $inter500: 'Inter Medium';
 
 
