style: formatação das paginas

--- a/src/scss/_error.scss
+++ b/src/scss/_error.scss
@@ -45,6 +45,6 @@
     color: $white;
     margin-top: 4.1rem;
     font-size: 1.8rem;
-    border-radius: .3rem;
+    border-radius: 0.3rem;
   }
 }
