styles: teste de responsividade nas recentsnews

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,3 +10,9 @@
 @import "error";
 @import 'recentnews';
 @import "animes";
+
+@media screen and (max-width:900px){
+  .maxWidth {
+      padding: 0 3rem;
+  }
+}
