--- a/src/scss/_recentnews.scss
+++ b/src/scss/_recentnews.scss
@@ -8,9 +8,19 @@
   &-box {
     @include flex-between;
     flex-wrap: wrap;
+    @media screen and (max-width:900px){
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+      
   }
   &-box-info {
     width: 28%;
     margin-bottom: 4.1rem;
+    @media screen and (max-width:900px){
+      width: 100%;
+      
+    }
   }
 }
